--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "next-material-kit",
+  "name": "black-window",
   "version": "1.1.0",
-  "description": "NextJS Version of Material Kit React by Creative Tim (https://creative-tim.com)",
+  "description": "Site for the video makers black window",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
+    "deploy": "npm run build && npm run export",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && rm -rf .next/ && npm install && npm run dev"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/creativetimofficial/nextjs-material-kit.git"
+    "url": "git+https://github.com/danieltolmon/black-window"
   },
   "keywords": [
     "next",
