--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react": "16.13.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
-    "react-slick": "0.25.2",
+    "react-slick": "^0.25.2",
     "react-swipeable-views": "0.13.9",
     "styled-components": "5.1.0",
     "webpack": "4.43.0"
