--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-slick": "^0.25.2",
     "react-swipeable-views": "0.13.9",
     "styled-components": "5.1.0",
